components/heptagon/test/good/reset_init.ept
(* CHECK main *)
node main() returns (ok : bool)
var x, y : bool;
let
  reset x = true -> false every false;
  y = true -> false;
  ok = x = y;
tel
